[gd_scene load_steps=6 format=3 uid="uid://bmkyqgk7njv0"]

[ext_resource type="Script" path="res://scenes/game/poem/poem_results.gd" id="1_jppfl"]
[ext_resource type="Script" path="res://scenes/game/poem/Poem.gd" id="2_y8n33"]
[ext_resource type="Script" path="res://scenes/game/poem/WordScoring.gd" id="3_4td08"]

[sub_resource type="Animation" id="Animation_31y5h"]
resource_name = "loading"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Poem:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Writing poem.", "Writing poem..
", "Writing poem..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d872g"]
_data = {
"loading": SubResource("Animation_31y5h")
}

[node name="PoemResults" type="Control"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jppfl")

[node name="Body" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Poem" type="Label" parent="Body"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Writing poem."
horizontal_alignment = 1
script = ExtResource("2_y8n33")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/Poem"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_d872g")
}

[node name="Timer" type="Timer" parent="Body/Poem"]

[node name="WordScoring" type="HBoxContainer" parent="Body"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_4td08")

[node name="WordList" type="VBoxContainer" parent="Body/WordScoring"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Words" type="Label" parent="Body/WordScoring/WordList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
horizontal_alignment = 2

[node name="Total" type="Label" parent="Body/WordScoring/WordList"]
layout_mode = 2
horizontal_alignment = 2

[node name="Control" type="Control" parent="Body/WordScoring"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ScoreList" type="VBoxContainer" parent="Body/WordScoring"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Scores" type="Label" parent="Body/WordScoring/ScoreList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TotalScore" type="Label" parent="Body/WordScoring/ScoreList"]
layout_mode = 2

[node name="Timer" type="Timer" parent="Body/WordScoring"]

[node name="Control" type="Control" parent="Body"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Button" type="Button" parent="Body/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -19.0
offset_right = 70.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "CONTINUE
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 5.0

[connection signal="pressed" from="Body/Control/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
